Update Vahan Dashboard 4 Regn.html

--- a/Vahan Dashboard 4 Regn.html
+++ b/Vahan Dashboard 4 Regn.html
@@ -1,7 +1,7 @@
 <html>
 <body>
     <iframe title="New Vahan Dashboard Nov -Updated - UI-UX - Copy"  
-    src="https://app.powerbi.com/reportEmbed?reportId=386b07a3-1f8a-4e16-be78-d31f5643acb6&autoAuth=true&ctid=2bd0232f-cce1-46d1-8ea6-4311555e302b" 
+    src="https://app.powerbi.com/view?r=eyJrIjoiYjYxYzBjNzUtZWRiZi00YzRkLWJhMTktYWM0Njg1YzNiY2QwIiwidCI6IjJiZDAyMzJmLWNjZTEtNDZkMS04ZWE2LTQzMTE1NTVlMzAyYiJ9" 
     frameborder="0" allowFullScreen="true"
     height = "735px"
     style = "width:100%; border:none;"
